Added story formats, html/json/twee import

--- a/index.html
+++ b/index.html
@@ -11,26 +11,11 @@
     <div id="root">
       <div class="grid container">
         <div class="cs1 ce12">
-          <img src="/src/assets/welcome.png" alt="" />
+          <img src="/src/assets/twino.svg" alt="" style="height: 10vh"/>
         </div>
         <div class="cs1 ce12">
-          <h1>Great, your app is running locally</h1>
-          <p>
-            You can now create your Developer team to get your app running in
-            Miro.
-          </p>
-        </div>
-        <div class="cs1 ce12">
-          <a
-            class="button button-primary"
-            href="https://developers.miro.com/docs/create-a-developer-team"
-            target="_blank"
-          >
-            Create a Developer team
-          </a>
-        </div>
-        <div class="cs1 ce12">
-          <p>To see your app, open it in a app panel on Miro.com, or preview it at <a href="/app.html" class="link link-primary">this url</a></p>
+          <h1>Twino, a Twine Miro App</h1>
+          <p>You can now add the app to your team in Miro.</p>
         </div>
       </div>
     </div>
