--- a/app.html
+++ b/app.html
@@ -10,20 +10,25 @@
     
     <div id="root">
       <div class="grid wrapper">
+        <!-- DESCRIPTION -->
         <div class="cs1 ce12">
-          <img src="/src/assets/Twine_vector_logo.svg" alt="" />
+          <img src="/src/assets/twino.svg" alt="" />
         </div>
         <div class="cs1 ce12">
           <h1>Twine in Miro</h1>
-          <p>This Miro App allows users to create Twine stories directly in Miro and generate playable version online.</p>
+          <p>This Miro App allows users to import, create, edit, collaborate on, and export Twine stories directly within Miro.</p>
         </div>
+        <!-- CREATE NEW -->
         <div class="cs1 ce12 centered">
-          <a
-            class="button button-primary"
-            id="create_story_template"
-          >
-            <span class="icon icon-plus"></span>Create New Story
-          </a>
+          <a class="button button-primary" id="create_story_template"><span class="icon icon-plus"></span>Create New Story</a>
+        </div>
+        <div class="cs1 ce12">
+            <hr/>
+        </div>
+        <!-- IMPORT -->
+        <div class="cs1 ce12 centered">
+          <a class="button button-primary" id="import_story"><span class="icon icon-export"></span>Import Story </a>
+          <input type="file" id="fileInput" accept=".json,.html,.twee" style="display: none;" />
         </div>
         <div class="cs1 ce12">
             <hr/>
@@ -31,40 +36,29 @@
         <div class="cs1 ce12 centered">
           <div class="form-group" style="width:100%;">
             <div style="display: flex; align-items:flex-end; justify-content: space-between; margin-bottom: 0.3rem;">
-              <label for="select-2">Select a Story</label>
-              <a
-                class="button button-primary button-small"
-                id="refresh_list"
-              ><span class="icon icon-refresh"></span></a>
+              <label for="select-2">Select a Story to Export or Test</label>
+              <a class="button button-primary button-small" id="refresh_list"><span class="icon icon-refresh"></span></a>
             </div>
             <select class="select" id="select" disabled>
               <option value="1">Empty</option>
             </select>
           </div>
         </div>
-        <!--<div class="cs1 ce12 centered">
-          <a
-            class="button button-primary"
-            id="display_modal" disabled
-          >
-            <span class="icon icon-eye"></span>Test story
-          </a>
-        </div>-->
         <div class="cs1 ce12 centered">
-          <a
-            class="button button-primary button-medium"
-            id="display_fullscreen" disabled
-          >
-            <span class="icon icon-presentation"></span>See story fullscreen
-          </a>
+          <a class="button button-primary button-medium" id="display_fullscreen" disabled><span class="icon icon-presentation"></span>See story fullscreen</a>
         </div>
         <div class="cs1 ce12 centered">
-          <a
-            class="button button-secondary button-small"
-            id="download" disabled
-          >
-            <span class="icon icon-download"></span>Download story
-          </a>
+          <a class="button button-secondary button-small" id="download" disabled><span class="icon icon-download"></span>Download story</a>
+        </div>
+        <div class="cs1 ce12">
+          <p class="p-medium">Select a card and click on <span class="icon icon-presentation" style="display: inline-block; transform: translateY(5px);"></span> to test from the card.</p>
+        </div>
+        <div class="cs1 ce12">
+            <hr/>
+        </div>
+        <div class="cs1 ce12">
+          <p class="p-small" id="story_format_list">Currently available Story Formats are:</p>
+          <p class="p-small">Using '<a class="link link-text" href="https://github.com/videlais/extwee" target="_blank">extwee</a>' to parse and compile Twine files.</p>
         </div>
       </div>
     </div>
